[workspace]

members = [
    "src/fundamentals/advanced_match",
    "src/fundamentals/hashmap",
    "src/fundamentals/iterator",
    "src/fundamentals/map-combinator",
    "src/fundamentals/option",
    "src/fundamentals/option-combinator",
    "src/fundamentals/result"
]

[package]
name = "RustOdyssey"
version = "0.1.0"
edition = "2021"

[dependencies]
